--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 	</header>
 	<main>
 		<section>
-			<a href="index.html">jump to homepage</a>
+			<a href="page1.html">jump to homepage</a>
 		</section>
 		<section>
 			<h2>List of Disney movies:</h2>
